[tool.poetry]
name = "time-machine-project"
version = "0.1.0"
description = ""
authors = ["Denis Szoke <denisszoke@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"
black = "^19.10b0"
pylint = "^2.5.2"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
